<resources>
	<string name="app_name">Scanning Wallet</string>
	<string name="slogan1">One unified API.</string>
	<string name="slogan2">One billion possibilities.</string>

	<string name="version_text">Version</string>
	<string name="version">1.0</string>

	<string name="wallets">Wallets</string>
	<string name="create_a_new_wallet">Create a new wallet</string>
	<string name="wallet_name">Name of wallet</string>
	<string name="address">Address</string>
	<string name="network">Network</string>
	<string name="save">Save</string>
	<string name="balance">Balance:</string>
	<string name="name_of_token">Name of token</string>

	<string name="btn_yes">Yes</string>
	<string name="btn_no">No</string>
	<string name="dismiss">Dismiss</string>

	<string name="action_settings">Settings</string>

	<string name="error_network_exception_general">We are sorry but there seems to be a problem connecting to internet.
\n\nPlease check your connection and try again.\n</string>
</resources>
