<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/hamburger_drawer_layout"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<include layout="@layout/toolbar" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingHorizontal="10dp"
			android:paddingTop="30dp">

			<EditText
				android:id="@+id/new_wallet_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:hint="@string/wallet_name"
				android:singleLine="true" />

			<EditText
				android:id="@+id/new_wallet_address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:hint="@string/address"
				android:singleLine="true" />

			<RadioGroup
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="20dp">

				<RadioButton
					android:id="@+id/radio_eth"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="true"
					android:text="Ethereum" />

				<RadioButton
					android:id="@+id/radio_bsc"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="Binance Smart Chain" />

				<RadioButton
					android:id="@+id/radio_fantom"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="Fantom" />

				<RadioButton
					android:id="@+id/radio_avalanche"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="Avalanche" />

				<RadioButton
					android:id="@+id/radio_matic"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="Polygon / Matic" />

				<RadioButton
					android:id="@+id/radio_moonbeam"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:checked="false"
					android:text="Moonbeam" />
			</RadioGroup>

			<Button
				android:id="@+id/new_wallet_save"
				android:layout_width="150dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/save" />

		</LinearLayout>
	</LinearLayout>

	<include layout="@layout/hamburger_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
